# AutoClose-AI

./: README.md  app.py  pyproject.toml  requirements.txt  run.py  streamlit_app.py
agents/: __init__.py  classification_agent.py  intake_agent.py  mcp_agent.py  orchestrator.py  summary_agent.py  vision_agent.py  workflow_runner.py
api/: routes.py
autoclose/: __init__.py  config.py  main.py  schemas.py
autoclose/agents/: __init__.py  base.py  classification_agent.py  intake_agent.py  mcp_integration_agent.py  orchestrator.py  vision_agent.py
autoclose/api/: __init__.py  app.py  routes.py
autoclose/mcp/: __init__.py  api_simulator.py  database.py  file_system.py  notification_service.py
autoclose/vector_store/: __init__.py  chroma_store.py
data/: autoclose.db
data/chroma/: chroma.sqlite3
data/processed/: 0520bc12-2bf1-4553-a9fa-f307399fc20b_20260217_055919.json  0561b117-fa70-4177-bcdc-06271bdee2d1_20260217_061827.json  139fb4c7-eaca-4610-b0a9-d1a194241dc3_20260217_061324.json  1b54b4f2-a8b1-4caf-8adf-59e9f5970ed4_20260217_071025.json  2d62ada7-f5c2-490a-8bed-f2579a739150_20260217_063442.json  3c9c1e13-c9f4-4c41-a96e-779c3c3233f2_20260217_061947.json  407fc75e-27ca-43a0-a2a5-7b6d864c8659_20260217_063644.json  51fecd5b-dfa7-4ce4-ac1a-1f2cccd65ba2_20260217_060110.json  6212c949-a65c-40d6-9164-dfa6a7dc16a8_20260217_060616.json  test-1_20260217_055236.json  (+8 more)
database/: __init__.py  sqlite_db.py
utils/: __init__.py  api_client.py  config.py  embeddings.py  file_storage.py  notification.py  schemas.py
vector_db/: __init__.py  chroma_store.py
